# chat-session-summary

./: .gitignore  README.md  Vulcan Labs - AI Engineer Intern - Take-Home Test.txt  compose.yml  makefile  pyproject.toml
api/: main.py
app_ui/: app.py
data/: conversation.json  questions.txt
db/: schema.sql
scripts/: export_conversations.py  test_api.py
src/application/chat/: chat.py  context_augment.py  rewriting.py  summarization.py  summarizer.py
src/domain/: chat.py  query.py
src/infrastructure/: settings.py
src/infrastructure/db/postgres/: orm.py  pool.py
test_data/: ambiguous_queries.jsonl  long_conversation.jsonl  normal_chat.jsonl
